# leaningrust-user-auth-mongodb

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: credentail.rs  hidden.rs  mod.rs  user.rs
src/model/: claims.rs  credentail.rs  mod.rs  token.rs  user.rs
src/repo/: mongodb.rs
src/repo/database/: base.rs  mod.rs  mongodb.rs
